# zimu-qwen3

./: .gitignore  CLAUDE.md  README.md  REQUIREMENT.md  main.py  pyproject.toml  requirements.txt  test_basic.py
scripts/: download_aligner.py
src/zimu_qwen3/: __init__.py  cli.py  web.py
src/zimu_qwen3/app/: main.py
src/zimu_qwen3/app/routes/: projects.py  transcribe.py
src/zimu_qwen3/core/: diarization.py  export.py  pipeline.py  preprocessing.py  segmentation.py
src/zimu_qwen3/static/: app.js  style.css
src/zimu_qwen3/static/favicon/: site.webmanifest
src/zimu_qwen3/static/js/: audioTrack.js  dubbingPanel.js  omnivoiceDubbingPanel.js  speakerVoicePanel.js  timeRanges.js  voxcpmDubbingPanel.js
src/zimu_qwen3/templates/: index.html  result.html  simple_index.html
tasks/: PROGRESS.md  TODO.md
